# openresearch

./: .dockerignore  .env.example  .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  README.md  bes_integration.md  chathistory.md  claude_gcp_sdar_handoff.md  docker-compose.yml  frontend_integration.md  gcp_info.md  issues.md  learn.md  optimizations.md  progress.md  pyproject.toml  railway.json  reprolab.db-shm  reprolab.db-wal  requirements.txt  runlog.md  start.sh  start_backend.sh  system_overview.md  uiprogress.md
.github/workflows/: ci.yml  docs-freshness.yml  infra-deploy.yml
backend/: __init__.py  app.py  cli.py  cli_paperbench.py  config.py  requirements-dev.txt  requirements-sdar.txt  requirements.txt
backend/agents/: __init__.py  baseline_implementation.py  baseline_knowledge.py  dashboard_emitter.py  dataset_recipes.py  dependency_verifier.py  environment_detective.py  execution.py  experiment_runner.py  improvement.py  orchestrator.py  paper_grounding.py  paper_understanding.py  pipeline.py  registry.py  report_generator.py  rubric_source.py  schemas.py  telemetry.py  topology.py  verification.py  worker_reports.py
backend/evals/: __init__.py  ab_testing.py  elo.py  innovation.py  reproduction.py  runner.py  schemas.py  sources.py  store.py
backend/eventstore/: __init__.py  interface.py  sqlite_store.py  subscription.py
backend/hermes_audit/: __init__.py  client.py  memory.py  models.py  payloads.py  providers.py  service.py  storage.py
backend/messaging/: __init__.py  bus.py  command.py  envelope.py  event.py  idempotency.py
backend/observability/: run_logging.py
backend/persistence/: __init__.py  database.py
backend/routes/: estimate.py  leaderboard.py  messages.py  papers.py  replay.py  reports.py
backend/schemas/: __init__.py  artifacts.py  citations.py  messages.py  scope.py
backend/services/: __init__.py  paths.py
backend/utils/: io.py
best_runs/: EXECUTIVE_SUMMARY.md  METHODOLOGY.md  PAPER_CLAIMS_VS_REPRODUCED.md  README.md
best_runs/adam/: Dockerfile  README.md  cost_ledger.jsonl  dashboard_events.jsonl  demo_status.json  environment_spec.json  experiment_runs.jsonl  final_report.json  final_report.md  generated_rubric.json  rubric_evaluation.json  timing.json  tokens_total.json
best_runs/adam_ab/: README.md  ab_report.json  ab_report.md
best_runs/allcnn/: Dockerfile  cells_results.json  cost_ledger.jsonl  dashboard_events.jsonl  demo_status.json  environment_spec.json  experiment_runs.jsonl  final_report.json  final_report.md  generated_rubric.json  rubric_evaluation.json  rubric_evaluation_g1regrade.json  rubric_tree.json  timing.json  tokens_total.json
best_runs/allcnn_ab/: README.md  ab_report.json  ab_report.md
best_runs/omnizip/: README.md  final_report.json  final_report.md  rubric_evaluation.json  rubric_tree.json
best_runs/resnet/: README.md  cost_ledger.jsonl  dashboard_events.jsonl  demo_status.json  experiment_runs.jsonl  final_report.json  final_report.md  generated_rubric.json  rubric_evaluation.json  rubric_tree.json  timing.json  tokens_total.json
data/: calibration.json  grader_calibration.json
docker/: entrypoint.sh  load_env.sh
docs/: 2026-06-21-catchup-for-armaan.md  agent-lifecycle.md  architecture.md  audit-initial.md  chathistory.md  codex_plan_final_report.md  deployment.md  harness-breakdown.md  infra.md  lab-e2e-full-reproduction-prompt.md  lab-smoke-test-prompt.md  lab-smoke-test-results.md  needed.md  plan_limit_recovery.md  reproduction.md  reprolab-agent-prd.md  rlm-pivot-mapping.md  setup-guide.md  troubleshooting.md
findings/: _sdar_text.txt  sdar_budget_verification.md  sdar_reproduction_budget.md  sdar_reproduction_grant_proposal.md  sdar_small_run_grant_5runs.md  sdar_small_run_grant_5runs.txt
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
paper-repro-bes-docs/: 01_TRANSCRIPT_AV.md  02_ARCHITECTURE_SPEC.md  03_BES_PROPOSAL.md  BES_INTEGRATION.md
papers/: README.md  registry.json
scripts/: __init__.py  _monitor_stages.py  _write_manifest.py  ab_compare.py  azure_build_cell_image.sh  azure_sdar_bootstrap_cluster.sh  azure_sdar_monitor.sh  azure_sdar_preflight.sh  azure_sdar_run.sh  azure_wire_env.sh  batch_reproduce.py  bes_a1_capture.py  bes_a1_safe_capture.py  build_orchestrator_image.sh  calibrate_grader.py  cancel_gcp_sdar_run.sh  dev.ps1  dev.sh  docs_freshness_check.py  gc_runs.py  gcp_sdar_preflight.sh  gke_check.sh  health_probe.sh  lab_screenshot_tail.mjs  landing-screenshots.sh  prune_runs.py  rdr_paperbench.py  rdr_paperbench_retry.sh  readiness.sh  recompute_adam_rubric.py  regrade_backfill.py  reserve_and_run_sdar.py  reserve_gpus.py  rlm_paperbench.py  rlm_root_ab.py  run_monitor.py  runpod_check.sh  score_run.py  sdar_gcp_assets.py  sdar_gcp_run.sh  (+8 more)
tests/: conftest.py  test_agent_runtime_claude_adapter.py  test_agent_runtime_factory.py  test_agent_runtime_openai_adapter.py  test_agent_runtime_orchestrator.py  test_baseline_implementation_data_recipes.py  test_catalogue_i8_i11_i13.py  test_claude_md_fidelity.py  test_cli_budget_flags.py  test_cli_claim_map.py  test_cli_default_mode.py  test_cli_dynamic_gpu_flags.py  test_cli_hybrid_mode.py  test_cli_normalizes_source_path.py  test_cli_paper_title.py  test_cli_provider_args.py  test_cli_resume_cells.py  test_cli_root_validation_gate.py  test_cli_run_spec.py  test_cli_sanity_mode.py  test_cli_scope_spec.py  test_compute_scope.py  test_cost_iteration_tag.py  test_dataset_recipes.py  test_demo_gate.py  test_dependency_verifier.py  test_env_bootstrap.py  test_environment_detective_from_validator.py  test_eval_ab_testing.py  test_eval_elo.py  test_eval_innovation.py  test_eval_reproduction.py  test_eval_store.py  test_event_registry_isolation.py  test_eventstore_sqlite.py  test_eventstore_sqlite_concurrent.py  test_execution_modes.py  test_foundation_bus.py  test_foundation_citations.py  test_foundation_command.py  (+85 more)
tools/: check-no-hardcoding.sh  rlms_spike.py  seed-fake-run.sh  test-all.sh  test-rlm-on-paper.py
(+1725 files in other folders)
