[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openresearch-backend"
version = "0.1.0"
description = "OpenResearch Agent backend service"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4,<5",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<1",
    "pymupdf>=1.24,<2",
    "claude-agent-sdk>=0.2.87",
    "openai-agents>=0.17,<0.18",
    "docker>=7,<8",
    "asyncssh>=2.14,<3",
    "beautifulsoup4>=4.12,<5",
    "pytesseract>=0.3,<0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
hermes = [
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git",
]
semantic = [
    "chromadb>=0.5,<1",
]
websearch = [
    "tavily-python>=0.5",
]
evals = [
    "deepeval>=2.0",
    "scipy>=1.12",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["backend*", "openresearch*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
