[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openresearch-backend"
version = "0.1.0"
description = "OpenResearch Agent backend service"
requires-python = ">=3.11"
# Mirrors backend/requirements.txt (the canonical install file used by README,
# CLAUDE.md and the Dockerfile). Keep the two lists in sync.
dependencies = [
    "anyio>=4,<5",
    "fastapi>=0.111,<1",
    "python-multipart>=0.0.9,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<1",
    "beautifulsoup4>=4.12,<5",
    "Pillow>=10,<12",
    "pymupdf>=1.24,<2",
    "pytesseract>=0.3.10,<0.4",
    "claude-agent-sdk>=0.2.87",
    "openai-agents>=0.17,<0.18",
    "docker>=7,<8",
    "asyncssh>=2.14,<3",
    "psutil>=5.9,<8",
    "azure-identity>=1.16,<2",
    "azure-storage-blob>=12.19,<13",
    "kubernetes>=29,<32",
    "deepeval>=2.0",
    "scipy>=1.12",
    "numpy>=1.26",
    "rlms==0.1.1",
    "python-dotenv>=1.2.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-socket>=0.8",
]
azure = [
    "azure-identity>=1.16,<2",
    "azure-storage-blob>=12.19,<13",
    "kubernetes>=29,<32",
]
hermes = [
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git",
]
semantic = [
    "chromadb>=0.5,<1",
]
websearch = [
    "tavily-python>=0.5",
]
evals = [
    "deepeval>=2.0",
    "scipy>=1.12",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Socket-level network hermeticity (audit 2026-06-10): no test may reach a
# real network host. Loopback stays open (TestClient/uvicorn-style tests),
# unix sockets stay open (docker SDK doubles). This is the structural fix for
# the 862s-stall class: a leaked .env credential can no longer turn a test
# into a live API call — it dies instantly with SocketConnectBlockedError.
addopts = "--disable-socket --allow-unix-socket --allow-hosts=127.0.0.1,::1"
